--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postdba@localhost:5432/bdpizzaria?schema=public"
+
+JWT_SECRET = 69a342ba6f02eee02bf62fc53625fe18
